--- a/Readme.rdoc
+++ b/Readme.rdoc
@@ -7,7 +7,7 @@ You are looking at some cucumber features and you come to step which you want to
     And I have put "some stuff" into "this field"
 
 You have 100's of step definitions over 10's of files and many are similar.  How do you quickly find where that step definition is?
-You could run that test again with the <code>--format usage</code> option but a) you have to wait for that test to run and b) you will get a load of un-needed information about all the other steps.
+You could run that test again with the <pre>--format usage</pre> option but a) you have to wait for that test to run and b) you will get a load of un-needed information about all the other steps.
 
     step --find "And I have put \"some stuff\" into \"this field\""
 Which will return:
