--- a/Readme.rdoc
+++ b/Readme.rdoc
@@ -47,25 +47,22 @@ All commands are run in the Command line from within your rails directory;
 
 ===Find a step definintion given a line from a feature
 
-Find a simple step by
-    step --find "Given I am logged in"
-
-Find a step that uses args
+    step --find "Given there is a registered user"
+    or
     step --find "Given I am logged in as \"sujimichi\" with the password \"password\""
 Note the step must be wrapped in <code>""</code> and any <code>"</code> in the step need to be escaped;<code>\"</code>
 
-Find a step when referenced with And
+Works just as well when "And" is used
+
     step --find "And I am logged in as \"sujimichi\" with the password \"password\""
 
---find will return the matched step and which line of which file;
+--find will return the matched step and line number and file name where it is defined.
     found:  Given /^I am logged in as "([^"]*)" with the password "([^"]*)"$/ do |username, password|
     line:   50 in login_steps.rb
 
 
 
 ===See which lines in features use a given step
-
-Given a step as used by a line in a feature, see which line of which file the step is defined on and which lines of the various features use it.
 
     step --useof "Given I am logged in as \"sujimichi\""
 
@@ -78,8 +75,7 @@ Given a step as used by a line in a feature, see which line of which file the st
         features/users.feature:
         lines: 9,14,25,27
 
-
-You can get the same output by giving the file name and linenumber of a step.
+You can get the same output by giving the file name and line number of a step.
 
     step --useof login_steps 42
 
