--- a/Readme.rdoc
+++ b/Readme.rdoc
@@ -36,7 +36,7 @@ You could use the <code>--format usage</code> option in cucumber but your test s
 ==install
 I've not released this to ruby gems yet.  It's my first Gem and was written in haste, its probably not worthy of rubygem release, but if you want to use it;
 
-    git@github.com:Sujimichi/Stepper.git
+    git clone git@github.com:Sujimichi/Stepper.git
     cd stepper
     bundle
     rake install
